--- a/package/index.html
+++ b/package/index.html
@@ -518,6 +518,23 @@
         </article>
 
         <article class="border">
+          <img
+            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+            alt="rokma.com"
+          />
+          <h2>Classic Card</h2>
+          <p>
+            Article content goes here. Lorem ipsum dolor sit
+            amet.
+          </p>
+          <p>
+            <a href="#" class="card-button">
+              <button>Call to Action</button>
+            </a>
+          </p>
+        </article>
+
+        <article class="border">
           <header>article header</header>
           <p>article first paragraph</p>
           <p>
@@ -695,9 +712,7 @@
               <div class="body">
                 <p>
                   Diam ridiculus fermentum vestibulum quam
-                  fames ad quis euismod rutrum lectus duis
-                  adipiscing sem ut porttitor a a torquent
-                  orci vulputate sit proin nostra.
+                  fames ad quis euismod rutrum lectus duis.
                 </p>
               </div>
               <footer>footer</footer>
@@ -750,9 +765,9 @@
           </div>
         </div>
       </section>
-
-      <hr />
       <!--
+      <hr />
+
       <div class="to_do container">
         <section data-type="modal">
           <hgroup>
@@ -786,7 +801,7 @@
           CSS &copy;2023 Toybreaker
         </p>
 
-        <nav class="centre">
+        <nav class="">
           <ul>
             <li>
               <a
