--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.8.9</title>
+    <title>FIKO 0.8.10</title>
 
     <link
       rel="icon"
@@ -176,9 +176,7 @@
 
           <!-- Accordion -->
           <details>
-            <summary>
-              This is an Accordion Title aka Summary
-            </summary>
+            <summary>Accordion Title / Summary</summary>
             <p>Accordion content goes here:</p>
             <p>
               Lorem ipsum dolor sit amet, consectetur
@@ -207,9 +205,7 @@
               is open, its
               <code>&lt;summary&gt;</code>
               becomes sticky and gets a background color.
-            </p>
-            <p>
-              Have you noticed this? Try scroll up right
+              Have you noticed it? Try scroll up right
               now...
             </p>
             <p>
