--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.8.10</title>
+    <title>FIKO 0.8.11</title>
 
     <link
       rel="icon"
@@ -220,8 +220,10 @@
 
           <details open>
             <summary>
-              <span class="status"></span>
-              Accordion
+              <span>
+                <span class="status"></span>
+                Accordion
+              </span>
             </summary>
 
             <p>
