--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.9.0</title>
+    <title>FIKO v0.9.3</title>
 
     <link
       rel="icon"
