added .h# utitlity classes | v0.9.5

--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO v0.9.5</title>
+    <title>FIKO v0.9.6</title>
 
     <link
       rel="icon"
@@ -22,6 +22,8 @@
       crossorigin
     />
     <style>
+      /* THIS STYLES BELONGS ONLY TO THE DEMO INDEX PAGE, SO THEY */
+
       .supports_text_wrap_balance {
         display: none;
         @supports (text-wrap: balance) {
