--- a/package/index.html
+++ b/package/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>FIKO v0.10.1</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO v0.10.0</title>
+    <meta name="color-scheme" content="light dark" />
 
+    <link rel="stylesheet" href="fiko.css" />
     <link
       rel="icon"
       type="image/svg+xml"
       href="/favico_dark.svg"
     />
-
     <link
       rel="preload"
       href="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
