fixed broken light/dark mode | v0.10.2

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.10.1</title>
+    <title>FIKO v0.10.2</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -585,9 +585,7 @@
           </hgroup>
           <article>
             <blockquote>
-              <em>
-                "This block is centred automatically."
-              </em>
+              <em>"I am auto centred."</em>
             </blockquote>
             <p>
               Use the
