imprved demo page | v0.10.3

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.10.2</title>
+    <title>FIKO v0.10.3</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -520,7 +520,7 @@
             alt="rokma.com"
           />
           <p>
-            Get the border like this:
+            To get the border just add the class:
             <code>&lt;article class="border"&gt;</code>
           </p>
           <p>
@@ -538,8 +538,7 @@
             alt="rokma.com"
           />
           <p>
-            Article content goes here. Lorem ipsum dolor sit
-            amet.
+            Article content goes here.
           </p>
           <p>
             <a href="#" class="card-button">
@@ -556,7 +555,7 @@
           />
           <h2>Classic Article Card</h2>
           <p>
-            Content goes here. Lorem ipsum dolor sit amet.
+            Content goes here.
           </p>
           <p>
             <a href="#" class="card-button">
@@ -669,9 +668,9 @@
             <h2>text-wrap: balance</h2>
           </header>
           <p class="container">
-            Fiko uses:
-            <code>&lt;text-wrap: balance&gt;</code>
-            <br />
+            Fiko headings use
+            <code>&lt;text-wrap: balance&gt;</code>.
+            <br><br>
             Does this browser support it?
             <span class="supports_text_wrap_balance">
               Yes!
@@ -679,13 +678,10 @@
             <span class="no_supports_text_wrap_balance">
               Nope.
             </span>
-            <br />
-            This long paragraph is here to let you see if it
-            makes any difference. Does it? This long
-            paragraph is here to let you see if it makes any
-            difference. It should improve readability. Does
-            it? This long paragraph is here to let you see
-            if it makes any difference. Does it?
+            <h4> This long h4 heading is here to show text wrap balance functionality. It's designed to improve readability.</h4>
+
+            <h5>Does it? This long h5 heading is here to let you see
+            if it makes any difference. Does it?</h5>
           </p>
         </hgroup>
       </article>
